<resources>
    <string name="app_name">Pehla Kadam</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_post">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="hint_date">Date</string>
    <string name="hint_likes">Likes</string>
    <string name="hint_shares">Shares</string>

    <string name="hint_name">Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="select_images_gallery">Select From Gallery</string>
    <string name="take_picture">Take a pic from Camera</string>
    <string name="contact_us">Contact Us</string>
    <string name="developers">Developers</string>
    <string name="about_developers">About Developers</string>
    <string name="failure_message">Unable to connect to Server</string>
    <string name="ok_text">Ok</string>
    <string name="developed"><![CDATA[Powered by]]></string>
    <string name="codenicely">Powered by CodeNicely</string>
    <string name="description">Description</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="edittext_mobile">Mobile No</string>
    <string name="edittext_name">Name</string>
    <string name="login_button">Login</string>
    <string name="skip_button">Skip</string>
    <string name="otp">Enter Otp</string>
    <string name="otp_screen_description">We have sent you a 4 digit Otp . \\n Please enter the otp in the Space given below to verify your mobile.</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="login">Login</string>
    <string name="photos_not_available">Photos not available</string>
    <string name="profile">Profile</string>
    <string name="join_reason">Why do you want to join ?</string>
    <string name="cancel">Cancel</string>
    <string name="join_us">Join Us</string>
    <string name="Upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="venue">Venue</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="please_give_us_your_feedback">Please give us your feedback</string>
    <string name="about_campaign_images">Images are related to specific Campaigns</string>
    <string name="ward">Address/Ward</string>
    <string name="eng">Eng</string>
    <string name="hin">हिंदी</string>
    <string name="introduction">Introduction</string>
    <string name="vision">Vision</string>
    <string name="achievements">Achievements</string>
    <string name="about_us">About Us</string>
    <string name="stories">Stories</string>
    <string name="gallery">Gallery</string>
    <string name="dustbin">Dustbin</string>
    <string name="campaign">Campaign</string>

</resources>
