<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#159786"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:title="@string/login"
            app:titleTextColor="@color/colorAccent" />
    </android.support.design.widget.AppBarLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_margin="50dp"
        android:text="One Time login"
        android:gravity="center"
        android:id="@+id/login_textview"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"

        android:layout_margin="4dp"
        app:hintTextAppearance="@style/EditTextLayoutTheme"
        tools:targetApi="lollipop">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="text"
            android:hint="@string/edittext_name"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/small_text_size"
            android:theme="@style/EditTextTheme"

            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"

        android:layout_margin="4dp"
        app:hintTextAppearance="@style/EditTextLayoutTheme"
        tools:targetApi="lollipop">

        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="number"
            android:hint="@string/edittext_mobile"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/small_text_size"
            android:theme="@style/EditTextTheme"

            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_ward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login_button"
        android:textColor="@color/colorAccent" />
    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/skip_button"
        android:textColor="@color/colorAccent" />


</LinearLayout>