<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="@dimen/image_big"

        >
        <ImageView
            android:layout_width="@dimen/image_very_big"
            android:layout_height="@dimen/image_big"
            android:src="@drawable/ic_profile"
            android:id="@+id/profile_image"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/image_bar"
            />

    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_large"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_medium"
        app:cardCornerRadius="@dimen/padding_large"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/image_small"
            android:layout_marginRight="@dimen/text_size_large"
            android:layout_marginLeft="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/textSizeExtraSmall"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name"
                    android:textSize="@dimen/image_small"
                    android:gravity="center"
                    android:id="@+id/name"
                    />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/textSizeExtraSmall"
                >
                <ImageView
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:src="@drawable/icon_contact"
                    android:layout_gravity="center_vertical"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/textSizeExtraSmall"
                    android:id="@+id/mobile"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_large"
                >
                <ImageView
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:src="@drawable/ic_address"
                    android:layout_gravity="center_vertical"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ward"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/textSizeExtraSmall"
                    android:id="@+id/ward"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_large"
                >
                <ImageView
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:src="@drawable/ic_email"
                    android:layout_gravity="center_vertical"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/textSizeExtraSmall"
                    android:id="@+id/email"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_large"
                >
                <ImageView
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:src="@drawable/ic_message"
                    android:layout_gravity="center_vertical"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="Purpose Of Joining"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/textSizeExtraSmall"
                    android:id="@+id/join_reason"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_lagoon"
                    android:layout_marginTop="@dimen/padding_large"
                    android:textSize="@dimen/textSizeSmall"
                    android:textColor="@color/colorAccent"
                    android:text="@string/cancel"
                    android:id="@+id/btn_cancel"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/blue_lagoon"
                    android:layout_marginTop="@dimen/padding_large"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSizeSmall"
                    android:text="@string/join_us"
                    android:id="@+id/btn_submit"
                    />
            </RelativeLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>