<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:title="@string/verify_otp"
            app:titleTextColor="@color/colorAccent" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:padding="12dp">
        <!--

                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="8dp"
                    app:contentPadding="8dp">
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/otp_screen_description"
                android:textColor="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                app:hintTextAppearance="@style/EditTextLayoutTheme"
                tools:targetApi="lollipop"
                android:padding="12dp"
                >

                <EditText
                    android:id="@+id/edittext_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/small_text_size"
                    android:theme="@style/EditTextTheme" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_margin="12dp"
                android:id="@+id/submit_otp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:clickable="true"
                android:enabled="true"
                android:gravity="center"
                android:text="submit"
                android:textColor="@color/colorAccent"

                />
        </LinearLayout>
        <!--</android.support.v7.widget.CardView>-->
    </ScrollView>

    <ProgressBar

        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone" />


</RelativeLayout>
