<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_large"
    android:layout_margin="@dimen/padding_small"
    android:background="@drawable/card_background"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/padding_large"

        android:id="@+id/card_campaign"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/image_big"
                android:minWidth="@dimen/image_big"
                android:maxHeight="@dimen/image_very_big"
                android:maxWidth="@dimen/image_very_big"
                android:background="@color/Light"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="@dimen/image_medium"
                    android:layout_height="@dimen/image_medium"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_profile"
                    android:id="@+id/image"
                    />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:id="@+id/bar_image"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_large"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hint_name"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/Dark"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_weight="1"
                        android:id="@+id/name_campaign"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hint_date"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="italic"
                        android:layout_weight="1"
                        android:id="@+id/date_campaign"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/venue"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/Dark"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_weight="1.5"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_weight="0.5"
                        android:id="@+id/venue_campaign"

                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/hint_post"
                    android:fontFamily="serif"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:id="@+id/desc_campaign"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/bar_card"
        />
</RelativeLayout>
