<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_large"

    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding=
            "@dimen/padding_large"
        android:id="@+id/card_post"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="@dimen/image_medium"
                        android:layout_height="@dimen/image_medium"
                        android:src="@drawable/ic_profile"
                        android:id="@+id/profile_image"
                        />
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        android:id="@+id/bar_user_image"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:gravity="top"
                        android:textAlignment="gravity"
                        android:layout_marginTop="@dimen/padding_small"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/Dark"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        android:id="@+id/name_post"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_date"
                        android:textColor="@color/cardview_shadow_start_color"
                        android:textSize="@dimen/textSizeExtraSmall"
                        android:textStyle="italic"
                        android:id="@+id/date_post"
                        />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/hint_post"
                android:fontFamily="serif"
                android:textColor="@color/colorPrimaryDark"
                android:maxLines="3"
                android:ellipsize="end"
                android:id="@+id/desc_post"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_image_post"
                android:minHeight="@dimen/layout_min_height"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/burger"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/hint_post"
                    android:layout_margin="@dimen/padding_medium"
                    android:id="@+id/image_post"
                    />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:id="@+id/bar_image_post"
                    />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textSizeExtraSmall"
                    android:text="1234"
                    android:id="@+id/likes_post"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textSizeExtraSmall"
                    android:text="@string/hint_likes"
                    android:paddingLeft="@dimen/padding_medium"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textSizeExtraSmall"
                    android:text="1234"
                    android:paddingLeft="@dimen/padding_large"
                    android:id="@+id/shares_post"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textSizeExtraSmall"
                    android:text="@string/hint_shares"
                    android:paddingLeft="@dimen/padding_medium"
                    />


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <ImageView
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:contentDescription="@string/hint_likes"
                    android:layout_toLeftOf="@+id/button_share"
                    android:background="@drawable/ic_like"
                    android:id="@+id/button_like"
                    />
                <ImageView
                    android:layout_width="@dimen/image_small"
                    android:layout_height="@dimen/image_small"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/hint_shares"
                    android:background="@drawable/ic_share"
                    android:id="@+id/button_share"
                    />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/bar_card_post"
        />


</RelativeLayout>
